# Cpp_network

./: CMakeLists.txt
include/: glad.h  graphic.h  server.h
src/: glad.c  graphic.cpp  main.cpp
